--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vaccination</title>
-  <link rel="stylesheet" type="text/css" media="all" href="/css/landing.css">
-  <script src="/js/landing.js"></script>
+  <link rel="stylesheet" type="text/css" media="all" href="css/landing.css">
+  <script src="js/landing.js"></script>
 </head>
 
 <body>
